[package]
name = "request-reflector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.3"
tokio = { version = "1.35.1", features = ["rt-multi-thread"] }
tower-http = { version = "0.5.0", features = ["trace", "tokio"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
